--- a/app/templates/parks.html
+++ b/app/templates/parks.html
@@ -24,6 +24,7 @@
     {% else %}
     <li><a href="/book">Book a visit</a></li>
     <li><a href="/bookings">Bookings</a></li>
+    <li><a href="/profile">My Profile</a></li>
     {% endif %}
   </ul>
 </nav>
