--- a/app/templates/parks_details.html
+++ b/app/templates/parks_details.html
@@ -57,6 +57,7 @@
     {% else %}
     <li><a href="/book">Book a visit</a></li>
     <li><a href="/bookings">Bookings</a></li>
+    <li><a href="/profile">My Profile</a></li>
     {% endif %}
   </ul>
 </nav>
@@ -64,6 +65,7 @@
   <a href="/parks" class="back-button">← Back to All Parks</a>
   {% if is_admin %}
   <a href="{{ url_for('update_park', park_id=park.id) }}" class="back-button" >Update Park</a>
+  <a href="{{ url_for('delete_park', park_id=park.id) }}" class="back-button">Delete Park</a>
   {% endif %}
   <div class="park-card">
     <img src="{{ url_for('static', filename=park.image_url) }}" alt="{{ park.name }}">
@@ -71,6 +73,17 @@
     <p><strong>Location:</strong> {{ park.location }}</p>
     <p><strong>Description:</strong> {{ park.description }}</p>
   </div>
+  <div>
+    <h3>Feedbacks</h3>
+    <ul>
+      {% for feedback in feedbacks %}
+      <li>{{ feedback.feedback }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% if is_logged_in %}
+  <a href="{{ url_for('submit_feedback', park_id=park.id) }}" class="back-button">Share feedback</a>
+  {% endif %}
 </section>
 </body>
 </html>
