--- a/app/templates/update_booking.html
+++ b/app/templates/update_booking.html
@@ -90,6 +90,7 @@
     {% else %}
     <li><a href="/book">Book a visit</a></li>
     <li><a href="/bookings">Bookings</a></li>
+    <li><a href="/profile">My Profile</a></li>
     {% endif %}
   </ul>
 </nav>
